--- a/src/components/ReviewItem/styles.css
+++ b/src/components/ReviewItem/styles.css
@@ -27,7 +27,7 @@
   text-overflow: ellipsis;
 }
 
-.arw_reviews__item_info__title {
+span.arw_reviews__item_info__title {
   font-size: 11px;
   display: block;
   padding-bottom: 4px;
@@ -44,17 +44,17 @@
     display: block;
   }
 
-  .arw_reviews__item_image {
+  img.arw_reviews__item_image {
     width: 100%;
     height: 150px;
   }
 
-  .arw_reviews__item_info {
+  div.arw_reviews__item_info {
     display: flex;
     margin-top: 20px;
   }
 
-  .arw_reviews__item_info_column {
+  div.arw_reviews__item_info_column {
     padding: 0 2%;
   }
 
